# hashing-benchmark

./: .env  .gitignore  .gitmodules  .vimspector.json  CMakeLists.txt  README.md  benchmark.sh  benchmark_collision.sh  benchmark_range.sh  benchmark_results.json  benchmark_results2.json  benchmark_results_part1.json  bernerslee_results.json  build-debug.sh  build.sh  cleaned_results.json  cleanup.py  edit_benchmark.py  export.py  fb_results.json  kapil_benchmark.sh  kapil_benchmark_collision.sh  kapil_benchmark_range.sh  kapil_benchmark_results.json  kapil_python_analysis_script.py  kapil_python_edit_script.py  masters_thesis.hpp  mcgraw_results.json  new2_results.json  new_results.json  new_results2.json  only_new.py  perf.sh  requirements.txt  results.json  results_bernerslee.json  results_mcgraw.json  results_tebow.json  run.sh  setup.sh  (+2 more)
data/: download.sh
docs/: bernerslee.html  index.html  mcgraw.html  tebow.html
include/: chained.hpp  chained_exotic.hpp  chained_model.hpp  cuckoo.hpp  cuckoo_model.hpp  kapil_chained.hpp  kapil_chained_exotic.hpp  kapil_chained_model.hpp  kapil_cuckoo.hpp  kapil_cuckoo_exotic.hpp  kapil_cuckoo_model.hpp  kapil_probe.hpp  kapil_probe_exotic.hpp  kapil_probe_model.hpp  mmphf_table.hpp  monotone_hashtable.hpp  probe_exotic.hpp  probe_model.hpp  rmi_hashtable.hpp  support.hpp
include/convenience/: builtins.hpp  undef.hpp
include/join/: config.h  npj_join_runner.cpp
include/join/configs/: base_configs.h  base_configs_backup.h  cpu-mapping-v2.txt  cpu-mapping-v2_berners_lee.txt  cpu-mapping.txt  cpu-mapping_berners_lee.txt  eth_configs.h  eth_configs_backup.h  rmi_configs.h
include/join/utils/: CC_CSSTree.h  affinity.h  algorithms.h  art32_tree.h  art64_tree.h  barrier.h  base_utils.h  cpu_mapping.h  cpu_mapping_one_numa.h  csv.h  data_generation.h  data_structures.h  datasets.hpp  eth_data_structures.h  eth_generic_task_queue.h  io.h  learned_sort.h  learned_sort_avx.h  learned_sort_for_sort_merge.h  lock.h  math.h  memory.h  numa_shuffle.h  stanford_hash.h
include/join/utils/eth_avx_merge/: avx_multiwaymerge.h  merge.h  scalar_multiwaymerge.h
include/join/utils/eth_avx_sort/: avxcommon.h  avxsort.h  avxsort_core.h  avxsort_multiway.h
results/: export_results.py  kapil_results.csv
results/kapil_benchmarks/: export_results.py  results.csv
results/sorted_rmi/: export_results.py  results.csv
scripts/evaluation/: join_tuner.sh
src/: CMakeLists.txt  benchmarks.cpp  kapil_benchmark.cpp  kapil_benchmarks.hpp  sorted_rmi.hpp  tests.cpp
src/benchmarks/: copy_tables.hpp  passive_stats.hpp  run_tables.hpp  tables.hpp  template_tables.hpp  template_tables_range.hpp
src/support/: datasets.hpp  probing_set.hpp
src/tests/: mmphftable-tests.hpp  monotonehashtable-tests.hpp
